Fix: sticky dates

--- a/front/package.json
+++ b/front/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@types/autosize": "^3.0.7",
     "@types/gravatar": "^1.8.1",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "autosize": "^4.0.2",
     "axios": "^0.20.0",
     "cross-env": "^7.0.2",
     "dayjs": "^1.9.1",
@@ -30,12 +32,13 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "babel-loader": "^8.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.11.8",
-    "@types/webpack-dev-server": "^3.11.0",
     "@types/webpack": "^4.41.22",
+    "@types/webpack-dev-server": "^3.11.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-emotion": "^10.0.33",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "react-refresh": "^0.8.3",
     "ts-node": "^9.0.0",
