--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack-dev-server"
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack-dev-server"
   },
   "author": "ZeroCho",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.9",
     "swr": "^0.3.5",
     "typescript": "^4.0.3"
   },
@@ -39,8 +40,10 @@
     "@types/webpack-dev-server": "^3.11.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
+    "css-loader": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "react-refresh": "^0.8.3",
+    "style-loader": "^2.0.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "type-fest": "^0.17.0",
