Add: eslint/prettier

--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/autosize": "^3.0.7",
     "@types/gravatar": "^1.8.1",
     "@types/react": "^16.9.51",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "autosize": "^4.0.2",
@@ -22,6 +23,7 @@
     "dayjs": "^1.9.1",
     "gravatar": "^1.8.1",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.9",
@@ -41,7 +43,11 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
     "css-loader": "^5.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
+    "prettier": "^2.1.2",
     "react-refresh": "^0.8.3",
     "style-loader": "^2.0.0",
     "ts-node": "^9.0.0",
