--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.51",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.8",
+    "@types/react-mentions": "^3.3.0",
     "@types/react-router-dom": "^5.1.6",
     "autosize": "^4.0.2",
     "axios": "^0.20.0",
@@ -25,6 +26,7 @@
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-mentions": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.9",
     "swr": "^0.3.5",
