Update: DM / socket / scroll to bottom

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -15,7 +15,8 @@
       "@components/*": ["components/*"],
       "@layouts/*": ["layouts/*"],
       "@pages/*": ["pages/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@typings/*": ["typings/*"]
     }
   }
 }
