--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-mentions": "^3.3.0",
     "@types/react-router-dom": "^5.1.6",
+    "@types/socket.io-client": "^1.4.34",
     "autosize": "^4.0.2",
     "axios": "^0.20.0",
     "cross-env": "^7.0.2",
@@ -29,6 +30,7 @@
     "react-mentions": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.9",
+    "socket.io-client": "^2.3.1",
     "swr": "^0.3.5",
     "typescript": "^4.0.3"
   },
