Update: prod settings

--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app",
-    "start": "node app"
+    "start": "cross-env NODE_ENV=production pm2 start app.js"
   },
   "author": "ZeroCho",
   "license": "MIT",
