--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "react-mentions": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.9",
+    "regexify-string": "^1.0.5",
     "socket.io-client": "^2.3.1",
     "swr": "^0.3.5",
     "typescript": "^4.0.3"
