--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack-dev-server",
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
     "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack"
   },
   "author": "ZeroCho",
@@ -12,59 +12,58 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
-    "@loadable/component": "^5.14.0",
+    "@loadable/component": "^5.14.1",
     "@types/autosize": "^3.0.7",
     "@types/gravatar": "^1.8.1",
     "@types/loadable__component": "^5.13.1",
-    "@types/react": "^16.9.51",
+    "@types/react": "^16.9.53",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.8",
     "@types/react-mentions": "^3.3.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/socket.io-client": "^1.4.34",
     "autosize": "^4.0.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "cross-env": "^7.0.2",
-    "dayjs": "^1.9.1",
+    "dayjs": "^1.9.4",
     "gravatar": "^1.8.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-mentions": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.9",
     "regexify-string": "^1.0.5",
     "socket.io-client": "^2.3.1",
-    "swr": "^0.3.5",
+    "swr": "^0.3.6",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
-    "@types/node": "^14.11.8",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-bundle-analyzer": "^3.8.0",
+    "@types/node": "^14.14.3",
+    "@types/webpack": "^4.41.23",
+    "@types/webpack-bundle-analyzer": "^3.9.0",
     "@types/webpack-dev-server": "^3.11.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
     "css-loader": "^5.0.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.12.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "prettier": "^2.1.2",
-    "react-refresh": "^0.8.3",
+    "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "type-fest": "^0.17.0",
-    "webpack": "^5.0.0",
+    "webpack": "^5.2.0",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
