--- a/multicampus/setting/package.json
+++ b/multicampus/setting/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack-dev-server",
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
     "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack"
   },
   "author": "ZeroCho",
@@ -23,20 +23,19 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/socket.io-client": "^1.4.34",
     "autosize": "^4.0.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "cross-env": "^7.0.2",
     "dayjs": "^1.9.1",
     "gravatar": "^1.8.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-mentions": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.9",
     "regexify-string": "^1.0.5",
     "socket.io-client": "^2.3.1",
     "swr": "^0.3.5",
-    "type-fest": "^0.17.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
@@ -58,13 +57,13 @@
     "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "prettier": "^2.1.2",
-    "react-refresh": "^0.8.3",
+    "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "webpack": "^5.0.0",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
