--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
-    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack"
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack",
+    "lint": "eslint . --ext ts,tsx"
   },
   "author": "ZeroCho",
   "license": "MIT",
@@ -49,12 +50,16 @@
     "@types/webpack": "^4.41.23",
     "@types/webpack-bundle-analyzer": "^3.9.0",
     "@types/webpack-dev-server": "^3.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
     "css-loader": "^5.0.0",
     "eslint": "^7.12.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "prettier": "^2.1.2",
     "react-refresh": "^0.9.0",
