--- a/alecture/package.json
+++ b/alecture/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development"
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" NODE_ENV=production webpack"
   },
   "author": "ZeroCho",
   "license": "MIT",
@@ -18,8 +19,9 @@
     "@loadable/component": "^5.14.1",
     "@types/gravatar": "^1.8.1",
     "@types/loadable__component": "^5.13.1",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.9.55",
+    "@types/react-custom-scrollbars": "^4.0.7",
+    "@types/react-dom": "^16.9.9",
     "@types/react-mentions": "^3.3.1",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
@@ -29,27 +31,30 @@
     "babel-plugin-emotion": "^10.0.33",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
+    "dayjs": "^1.9.4",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "regexify-string": "^1.0.5",
     "socket.io-client": "^2.3.1",
     "style-loader": "^2.0.0",
-    "swr": "^0.3.6",
+    "swr": "^0.3.7",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.3",
-    "webpack": "^5.2.0"
+    "typescript": "^4.0.5",
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
-    "@types/node": "^14.14.3",
-    "@types/webpack": "^4.41.23",
-    "@types/webpack-dev-server": "^3.11.0",
-    "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
+    "@types/node": "^14.14.6",
+    "@types/webpack": "^4.41.24",
+    "@types/webpack-dev-server": "^3.11.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^5.2.1",
     "prettier": "^2.1.2",
