--- a/front/package.json
+++ b/front/package.json
@@ -11,64 +11,64 @@
   "author": "ZeroCho",
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@loadable/component": "^5.14.1",
     "@types/autosize": "^3.0.7",
     "@types/gravatar": "^1.8.1",
     "@types/loadable__component": "^5.13.1",
-    "@types/react": "^16.9.53",
+    "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.7",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-mentions": "^3.3.0",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/socket.io-client": "^1.4.34",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-mentions": "^4.1.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.35",
     "autosize": "^4.0.2",
-    "axios": "^0.21.0",
-    "cross-env": "^7.0.2",
-    "dayjs": "^1.9.4",
+    "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.10.4",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
-    "react-mentions": "^4.0.2",
+    "react-mentions": "^4.1.1",
     "react-router-dom": "^5.2.0",
-    "react-toastify": "^6.0.9",
+    "react-toastify": "^7.0.1",
     "regexify-string": "^1.0.5",
-    "socket.io-client": "^2.3.1",
-    "swr": "^0.3.6",
-    "typescript": "^4.0.3"
+    "socket.io-client": "^3.1.0",
+    "swr": "^0.4.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
-    "@types/node": "^14.14.3",
-    "@types/webpack": "^4.41.23",
+    "@types/node": "^14.14.22",
+    "@types/webpack": "^4.41.26",
     "@types/webpack-bundle-analyzer": "^3.9.0",
-    "@types/webpack-dev-server": "^3.11.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-emotion": "^10.0.33",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "@types/webpack-dev-server": "^3.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "prettier": "^2.1.2",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
+    "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "webpack": "^5.2.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.18.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
