--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -33,7 +33,7 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
