--- a/alecture/package.json
+++ b/alecture/package.json
@@ -18,16 +18,22 @@
     "@types/gravatar": "^1.8.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
+    "dayjs": "^1.10.4",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
+    "react-mentions": "^4.1.1",
     "react-refresh": "^0.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.3",
+    "regexify-string": "^1.0.5",
+    "socket.io-client": "^2.4.0",
     "style-loader": "^2.0.0",
     "swr": "^0.4.2",
     "ts-node": "^9.1.1",
@@ -39,10 +45,14 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.16",
+    "@types/autosize": "^3.0.7",
     "@types/loadable__component": "^5.13.3",
     "@types/node": "^14.14.28",
+    "@types/react-custom-scrollbars": "^4.0.7",
+    "@types/react-mentions": "^4.1.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.35",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.2.2",
