--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -21,15 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/core": "^7.6.13",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.5.1",
-    "@nestjs/platform-socket.io": "^7.6.12",
+    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/platform-socket.io": "^7.6.13",
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.12",
+    "@nestjs/websockets": "^7.6.13",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
@@ -41,21 +41,21 @@
     "rxjs": "^6.6.3",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.31",
-    "typeorm-model-generator": "^0.4.4-no-engines",
+    "typeorm-model-generator": "^0.4.4",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
+    "@nestjs/cli": "7.5.1",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/testing": "^7.6.13",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
+    "@types/node": "^14.14.31",
     "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
