--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
