--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -28,9 +28,11 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/platform-socket.io": "^7.6.13",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.13",
+    "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
