--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,6 @@
     "@types/gravatar": "^1.8.1",
     "@types/loadable__component": "^5.13.1",
     "@types/react": "^17.0.0",
-    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^17.0.0",
     "@types/react-mentions": "^4.1.0",
     "@types/react-router-dom": "^5.1.7",
@@ -30,14 +29,14 @@
     "dayjs": "^1.10.4",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
-    "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.3.0",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.1.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.1",
     "regexify-string": "^1.0.5",
     "socket.io-client": "^2.4.0",
-    "swr": "^0.4.0",
+    "swr": "^0.5.6",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -45,28 +44,28 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-beta.4",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.14.22",
-    "@types/webpack": "^4.41.26",
-    "@types/webpack-bundle-analyzer": "^3.9.0",
-    "@types/webpack-dev-server": "^3.11.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.0",
+    "@types/webpack-dev-server": "^3.11.3",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "prettier": "^2.2.1",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.10.0",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "webpack": "^5.18.0",
+    "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
