--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -34,6 +34,7 @@
     "@nestjs/websockets": "^7.6.13",
     "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.0",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
