--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@emotion/babel-plugin": "^11.1.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@jjordy/swr-devtools": "^1.0.4",
     "@loadable/component": "^5.14.1",
     "@types/autosize": "^3.0.7",
     "@types/gravatar": "^1.8.1",
