--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -19,7 +19,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync",
+    "db:migrate": "npm run typeorm migration:run",
+    "db:migrate:revert": "npm run typeorm migration:revert",
+    "db:create-migration": "npm run typeorm migration:create -- -n",
+    "db:generate-migration": "npm run typeorm migration:generate -- -n"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.13",
@@ -48,6 +56,7 @@
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.31",
     "typeorm-model-generator": "^0.4.4",
+    "typeorm-seeding": "^1.6.1",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
