--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production pm2 start dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -45,11 +45,13 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pm2": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
@@ -60,7 +62,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "7.5.1",
+    "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.6.13",
     "@types/express": "^4.17.8",
