--- a/setting/ts/package.json
+++ b/setting/ts/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "typescript": "^4.2.2"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.14.31",
+    "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.2.2",
