--- a/setting/ts/package.json
+++ b/setting/ts/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
+    "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -25,11 +26,11 @@
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.14.31",
     "@types/react-router-dom": "^5.1.7",
-    "@types/webpack": "^4.41.26",
+    "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
@@ -38,9 +39,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "prettier": "^2.2.1",
-    "react-refresh": "^0.9.0",
-    "style-loader": "^2.0.0",
-    "ts-node": "^9.1.1",
+    "react-refresh": "^0.10.0",
+    "style-loader": "^3.0.0",
+    "ts-node": "^10.0.0",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
