--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js",
+    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production pm2 start dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -30,18 +30,18 @@
     "db:generate-migration": "npm run typeorm migration:generate -- -n"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.13",
-    "@nestjs/platform-socket.io": "^7.6.13",
-    "@nestjs/serve-static": "^2.1.4",
-    "@nestjs/swagger": "^4.7.13",
-    "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.13",
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/config": "^1.0.1",
+    "@nestjs/core": "^8.0.6",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/platform-socket.io": "^8.0.6",
+    "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.0.6",
     "@types/multer": "^1.4.5",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -54,38 +54,37 @@
     "pm2": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
+    "rxjs": "^7.3.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.31",
+    "typeorm": "^0.2.37",
     "typeorm-model-generator": "^0.4.4",
     "typeorm-seeding": "^1.6.1",
-    "webpack": "^4.46.0"
+    "webpack": "^5.51.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.6.13",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.3",
+    "@nestjs/testing": "^8.0.6",
     "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.31",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^14.17.11",
     "@types/passport-local": "^1.0.33",
-    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.2.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "prettier": "^2.1.2",
-    "start-server-webpack-plugin": "^2.2.5",
+    "run-script-webpack-plugin": "^0.0.11",
     "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5",
-    "webpack-node-externals": "^2.5.2"
+    "typescript": "^4.3.5",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
