--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,7 @@
     "@emotion/styled": "^11.0.0",
     "@jjordy/swr-devtools": "^1.0.4",
     "@loadable/component": "^5.14.1",
-    "@types/autosize": "^3.0.7",
+    "@types/autosize": "^4.0.0",
     "@types/gravatar": "^1.8.1",
     "@types/loadable__component": "^5.13.1",
     "@types/react": "^17.0.0",
@@ -38,8 +38,8 @@
     "react-toastify": "^7.0.1",
     "regexify-string": "^1.0.5",
     "socket.io-client": "^2.4.0",
-    "swr": "^0.5.6",
-    "typescript": "^4.1.3"
+    "swr": "^1.0.0-beta.13",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -51,11 +51,11 @@
     "@types/node": "^14.14.22",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.0",
-    "@types/webpack-dev-server": "^3.11.3",
+    "@types/webpack-dev-server": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
+    "css-loader": "^6.2.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -64,12 +64,12 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "prettier": "^2.2.1",
     "react-refresh": "^0.10.0",
-    "style-loader": "^2.0.0",
-    "ts-node": "^9.1.1",
+    "style-loader": "^3.2.1",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.9.0",
     "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0"
   }
 }
