--- a/setting/js/package.json
+++ b/setting/js/package.json
@@ -18,17 +18,17 @@
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.5",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.0",
-    "eslint": "^7.20.0",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.1",
     "prettier": "^2.2.1",
-    "react-refresh": "^0.9.0",
-    "style-loader": "^2.0.0",
+    "react-refresh": "^0.10.0",
+    "style-loader": "^3.2.1",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0"
   }
 }
