--- a/front/package.json
+++ b/front/package.json
@@ -38,7 +38,7 @@
     "react-toastify": "^7.0.1",
     "regexify-string": "^1.0.5",
     "socket.io-client": "^2.4.0",
-    "swr": "^1.0.0-beta.13",
+    "swr": "^0.5.6",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
