Update: react-query

--- a/front-rq/package.json
+++ b/front-rq/package.json
@@ -15,27 +15,27 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@loadable/component": "^5.14.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@types/gravatar": "^1.8.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "autosize": "^4.0.2",
+    "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "dayjs": "^1.10.4",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
-    "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.1.1",
     "react-query": "^3.13.12",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.10.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.3",
     "regexify-string": "^1.0.5",
-    "socket.io-client": "^2.4.0",
+    "socket.io-client": "^4.2.0",
     "style-loader": "^3.2.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.1.5",
@@ -47,10 +47,9 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.16",
-    "@types/autosize": "^3.0.7",
+    "@types/autosize": "^4.0.0",
     "@types/loadable__component": "^5.13.3",
     "@types/node": "^14.14.28",
-    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-mentions": "^4.1.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
@@ -60,9 +59,8 @@
     "@types/webpack-dev-server": "^4.0.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
