--- a/ch2/package.json
+++ b/ch2/package.json
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.45",
     "typeorm-seeding": "^1.6.1"
   },
