--- a/nest-typeorm/package.json
+++ b/nest-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-typeorm",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "",
   "private": true,
@@ -30,50 +30,50 @@
     "db:generate-migration": "npm run typeorm migration:generate -- -n"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.6",
-    "@nestjs/config": "^1.0.1",
-    "@nestjs/core": "^8.0.6",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.6",
-    "@nestjs/platform-socket.io": "^8.0.6",
-    "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/swagger": "^5.0.9",
-    "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.0.6",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/swagger": "^6.0.0",
+    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/websockets": "^9.0.0",
     "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "passport": "^0.4.1",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pm2": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.37",
+    "typeorm": "^0.3.0",
     "typeorm-model-generator": "^0.4.4",
     "typeorm-seeding": "^1.6.1",
     "webpack": "^5.51.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.1.1",
-    "@nestjs/schematics": "^8.0.3",
-    "@nestjs/testing": "^8.0.6",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^27.0.1",
-    "@types/node": "^14.17.11",
+    "@types/node": "^16.11.27",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.12.1",
-    "eslint-config-prettier": "8.3.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^27.0.6",
     "prettier": "^2.1.2",
