--- a/alecture/package.json
+++ b/alecture/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --env development",
-    "build": "cross-env NODE_ENV=production TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
+    "dev": "webpack serve --env development",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ZeroCho",
@@ -37,7 +37,7 @@
     "socket.io-client": "^2.4.0",
     "style-loader": "^2.0.0",
     "swr": "^0.4.2",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.5",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0"
@@ -70,6 +70,6 @@
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "prettier": "^2.2.1",
     "webpack": "^5.22.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.10.1"
   }
 }
